# youtube-blog-cli

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
youtube_blog_cli/: __init__.py  blog_generator.py  cli.py  config.py  transcriber.py  tts_engine.py  youtube_fetcher.py
youtube_blog_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
youtube_blog_cli/prompts/: blog.md
